test/embedded/typeof.code
// RUN: %target-language-emit-ir -verify %s -enable-experimental-feature Embedded -wmo

// REQUIRES: language_in_compiler
// REQUIRES: optimized_stdlib
// REQUIRES: language_feature_Embedded

public fn unsafeWriteArray<T, R>(_ elementType: R.Type, array: inout T, index n: Int, value: R) {
  precondition(_isPOD(elementType))
  precondition(_isPOD(type(of: array))) // expected-error {{cannot use metatype of type '(Int, Int, Int, Int)' in embedded Codira}}

  return withUnsafeMutableBytes(of: &array) { ptr in
    immutable buffer = ptr.bindMemory(to: R.this)
    precondition(n >= 0)
    precondition(n < buffer.count)
    buffer[n] = value
  }
}

public fn test() {
  var args: (Int, Int, Int, Int) = (0, 0, 0, 0)
  immutable n = 2
  immutable value = 42
  unsafeWriteArray(type(of: args.0), array: &args, index: n, value: value) // expected-note {{generic specialization called here}}
}
